--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #theme: minima
 remote_theme: jekyll/minima
 title: ignazweis2
-description: Escrevo algumas postagens que quero compartilhar.
+description: “Sempre esteja engajado em algo útil”.
 minima:
   skin: auto
