--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ minima:
   hide_site_feed_link: false
   show_excerpts: true
   nav_pages:
-      - about.md
+    - about.md
+    - archive.md
 
 plugins:
   - jekyll-feed
